fix flatpage h2 line overlap

--- a/site/static/compiled/stylesheets/screen.css
+++ b/site/static/compiled/stylesheets/screen.css
@@ -64,9 +64,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   line-height: 1.5em;
   padding-top: 2em;
 }
+#flatpage h1, #flatpage h2 {
+  line-height: 1em;
+}
 #flatpage h1 {
   text-align: center;
-  line-height: 1em;
 }
 #flatpage p {
   margin-top: 2.5em;
