--- a/site/static/sass/_flatpages.sass
+++ b/site/static/sass/_flatpages.sass
@@ -3,9 +3,10 @@
   //+zen-grid-item(6, 2)
   line-height: 1.5em
   padding-top: 2em
+  h1, h2
+    line-height: 1em
   h1
     text-align: center
-    line-height: 1em
   p
     margin-top: 2.5em
     clear: both
